--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "stop_solver"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Juan Manuel Young Hoyos"]
 
 [dependencies]
+reqwest = "0.11.6"
+serde = "1.0.130"
+serde_json = "1.0"
+tokio = { version = "1.14.0", features = ["full"] }
