--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ authors = ["Juan Manuel Young Hoyos"]
 reqwest = "0.11.6"
 serde = "1.0.130"
 serde_json = "1.0"
+futures = "0.3"
 tokio = { version = "1.14.0", features = ["full"] }
